<resources>
  <string name="app_name">Movie Browser</string>

  <string name="tab_now_playing">Now Playing</string>
  <string name="tab_favorite">Favorites</string>
  <string name="tab_settings">Settings</string>

  <string name="title_similar_movies">Similar Movies</string>

  <string name="msg_added_to_favorite">Added to favorite</string>
  <string name="msg_removed_from_favorite">Removed from favorite</string>

  <string name="error_unauthorized">Failed to call TMDb web API. Please specify a valid API key.</string>
  <string name="error_fetch_movie_list">Failed to fetch movie list.</string>
  <string name="error_fetch_movie_details">Failed to fetch movie details.</string>
  <string name="error_fetch_similar_movies">Failed to fetch similar movies.</string>

  <string name="setting_category_data">Data</string>
  <string name="setting_clear_data">Clear Data</string>
  <string name="setting_clear_data_summary">Clear cache and your local favorites.</string>
  <string name="setting_clear_cache">Clear Cache</string>
  <string name="setting_clear_cache_summary">Clear cached movie data and images.</string>

  <string name="title_confirm_clear">Clear User Data</string>
  <string name="message_confirm_clear">Not only cached movie data but also your local favorites will be removed. Please confirm to proceed.</string>

  <string name="title_clearing">Clearing User Data</string>
  <string name="message_clearing">Start to clear &#8230;</string>
  <string name="message_clearing_fmt">Clearing %s &#8230;</string>
  <string name="message_clearing_item_cache">cached movie data</string>
  <string name="message_clearing_item_favorites">local favorites</string>
  <string name="message_clearing_item_images">cached images</string>

  <string name="setting_category_about">About</string>
  <string name="setting_about_summary">A demo application.</string>
    <string name="tab_more">More</string>
</resources>
